# Motion

./: .gitignore  license.txt  readme.md  readme.txt
Motion/: CMakeLists.txt
Motion/cmake/: Config.cmake  Macros.cmake
Motion/examples/: Basic Guide.cpp
Motion/include/Motion/: AudioPlayback.h  AudioPlayback.hpp  AudioPlaybackBase.hpp  Config.h  DataSource.h  DataSource.hpp  Export.h  Motion.hpp  SFMLAudioPlayback.hpp  SFMLVideoPlayback.hpp  State.hpp  Types.h  VideoPlayback.h  VideoPlayback.hpp  VideoPlaybackBase.hpp
Motion/include/Motion/priv/: AudioPacket.hpp  VideoPacket.hpp
Motion/src/Motion/: AudioPacket.cpp  AudioPlayback.cpp  AudioPlaybackBase.cpp  CMakeLists.txt  CSFMLStructs.h  DataSource.cpp  DataSourceStruct.h  MotionStructs.h  RenderTextureStruct.h  RenderWindowStruct.h  SFMLAudioPlayback.cpp  SFMLVideoPlayback.cpp  VideoPacket.cpp  VideoPlayback.cpp  VideoPlaybackBase.cpp  ViewStruct.h
MotionNET/: AudioPlayback.cs  DataSource.cs  Globals.cs  InternalBase.cs  InternalBaseMember.cs  MotionNET.csproj  MotionNET.sln  State.cs  VideoPlayback.cs
MotionNET/Examples/: Basic Guide.cs
MotionNET/MotionNET/: AudioPlaybackBase.cs  Config.cs  DataSource.cs  InternalBase.cs  InternalBaseMember.cs  MotionNET.csproj  State.cs  VideoPlaybackBase.cs
MotionNET/MotionNET.SFML/: Config.cs  MotionNET.SFML.csproj  SFMLAudioPlayback.cs  SFMLVideoPlayback.cs
MotionNET/MotionNET.SFML/Properties/: AssemblyInfo.cs
MotionNET/MotionNET/Properties/: AssemblyInfo.cs
MotionNET/Properties/: AssemblyInfo.cs
